# Tuxemon

./: .gitignore  .readthdocs.yaml  .readthedocs.yaml  .travis.yml  ATTRIBUTIONS.md  Azure_Town.tmx  Azure_Town_hall.tmx  CONTRIBUTING.md  CONTRIBUTORS.md  CREDITS.md  Hello.txt  MANIFEST.in  Makefile  README.md  SPYDER README.md  SPYDER_README.md  Saddle  TestClient.py  autoInstall.py  build_android.py  build_opk.sh  build_win32.py  combat.py  install_requirements.py  key.txt  key.txt.pub  main.py  mypy.ini  nightly_opk.sh  professor_lab.tmx  pylintrc  pyproject.toml  requirements.txt  run_tuxemon.py  setup.cfg  setup.py  taba_town.tmx  tabathas.tmx  technique.py  test_manager.py  (+4 more)
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  build_flatpak.yml  test.yml  (+2 more)
.travis/: install.sh
Models/: computer_screen.blend
Robuilder/: README.md
Robuilder-/: credits.txt
buildconfig/: README.md  build_android.py  build_android.sh  build_apk.sh  build_deb.sh  build_flatpak.sh  build_installer.bat  build_installer.sh  build_opk.sh  build_pypy_portable_linux.sh  build_pypy_portable_windows.sh  build_sdist.sh  build_tarball.sh  build_win32.sh  build_windows.sh  build_wine.sh  build_wine_cx_freeze.sh  build_wine_pyinstaller.sh  default.gcw0.desktop  install_android.sh  install_focal.sh  install_wine.sh  install_xenial.sh  prebuild_deb.sh  prebuild_debmin.sh  prebuild_flatpak.sh  prebuild_opk.sh  prebuild_win32.sh  setup_android.py  setup_cx_freeze.py  setup_win32.py  setup_windows.nsi  setup_windows.py  setup_wine_debian10.sh  setup_wine_ubuntu_focal.sh  tuxemon.spec
concept/: Thumbs.db
docs/: Makefile  conf.py  core.components.ai.rst  core.components.cli.rst  core.components.config.rst  core.components.db.rst  core.components.event.actions.combat.rst  core.components.event.actions.player.rst  core.components.event.actions.rst  core.components.event.actions.sound.rst  core.components.event.conditions.combat.rst  core.components.event.conditions.core.rst  core.components.event.conditions.music.rst  core.components.event.conditions.npc.rst  core.components.event.conditions.player.rst  core.components.event.rst  core.components.eztext.rst  core.components.fusion.rst  core.components.item.rst  core.components.log.rst  core.components.menu.dialog_menu.rst  core.components.menu.item_menu.rst  core.components.menu.rst  core.components.menu.save_menu.rst  core.components.monster.rst  core.components.player.rst  core.components.pyganim.rst  core.components.rst  core.components.rumble.rst  core.components.rumble.tools.rst  core.components.screen.rst  core.components.ui.bar.rst  core.components.ui.rst  core.main.rst  core.rst  core.states.combat.rst  core.states.rst  index.rst  make.bat  requirements.txt  (+77 more)
obsolete_tests/: README  test_has_item_condition.py  test_map.py  test_sprites.py  test_state_manager.py
py3_tests/: README.md
schemas/: economy-schema.json  encounter-schema.json  environment-schema.json  inventory-schema.json  item-schema.json  monster-schema.json  music-schema.json  npc-schema.json  sound-schema.json  technique-schema.json
scripts/: README.md  TestClient.py  bake_map.py  check.sh  compare_locales.py  convert_json_locale.py  create_tech_json.py  download_technique_animations.py  fill_in_monster_slugs.py  fix_perms.sh  fmt.sh  generate_random_encounter.py  get_all_events.py  image_optim.sh  image_optim_advpng.sh  image_optim_oxipng.sh  locale_check.py  make_map_migration.py  modify_json.py  packer.sh  renumber_events.py  schema.py  set_movelist.py  snap_map.py  sync-wiki-monsters.py  test_actions.py  test_freeze.py  test_manager.py  verify_master_locale.py  verify_monsters.py  yamlify_map_script.py
tests/: README.md  test_has_item_condition.py  test_state_manager.py  test_text.py
tuxemon/: .android.json  .directory  CREDITS.md  __main__.py  ai.py  animation.py  animation_entity.py  audio.py  battle.py  build_android.py  camera.py  check.sh  cli.py  client-view.py  client.py  clock.py  combat.py  config.py  db.py  default.gcw0.desktop  element.py  encounter.py  entity.py  euclid.py  evolution.py  formula.py  fusion.py  graphics.py  headless_server.py  locale.py  log.py  main.py  map.py  map_loader.py  map_view.py  math.py  middleware.py  mission.py  mod_downloader.py  mod_manager.py  (+28 more)
(+3778 files in other folders)
